--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-portfolio",
+  "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,7 +25,8 @@
     "react-particles-js": "^3.3.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "styled-loaders-react": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
